[gd_scene load_steps=5 format=2]

[ext_resource path="res://_code/Scenes/Ghost/Ghost.gd" type="Script" id=1]
[ext_resource path="res://_graphics/Ghost/Ghost.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 27 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 160.078

[node name="Ghost" type="KinematicBody2D" groups=[
"Ghost",
]]

input_pickable = false
collision_layer = 4
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Sound" type="AudioStreamPlayer2D" parent="." index="2"]

stream = null
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Sight" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight" index="0"]

shape = SubResource( 2 )

[node name="Attack" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]

[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]

[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]


